# vamos-deployment

./: .gitignore  .gitmodules  README.md  ROS.md  SYSTEM_SETUP.md  environment.yml  requirements.txt  setup.sh  setup_ros_conda.sh  test_vamos.ipynb  test_vamos.py  vamos_demo.ipynb
navigate/: README.md  install.sh  package.xml
navigate/config/: navigate_custom.yaml  navigate_hound.yaml  navigate_spot.yaml
navigate/launch/: compress_hound.launch  image_navigate_custom.launch  image_navigate_hound.launch
navigate/nodes/: depth_decode_test.py  dummy_goal_publisher.py  navigate.py
server/: start_server.sh  test_vamos.ipynb  test_vamos_model.py  vlm_navigation_interface.html  vlm_server.py
trajectory_prediction/: setup.py
trajectory_prediction/trajectory_prediction/: __init__.py  trajectory_predictor.py
trajectory_projection/trajectory_projection/: projector.py
value_functions/: hound_big_critic.onnx  spot_big_critic.onnx
vamos/: package.xml  requirements.txt  setup.py
vamos/config/: vlm_inference.yaml
vamos/nodes/: navigate.py  test_compressed_depth.py  value_publisher.py  value_query.py
vamos/src/vamos/: __init__.py  dowload_hf_model.py  (+1 more)
vamos_ws/src/: CMakeLists.txt
vlm_ros/: .gitignore  CMakeLists.txt  package.xml
vlm_ros/config/: navigate.yaml  vlmn_rviz.rviz
vlm_ros/launch/: navigate.launch  value.launch  value_spot.launch
vlm_ros/nodes/: dummy_inference.py  interactive_projector.py  navigate.py  value_publisher.py  value_query.py
vlm_ros/src/vlm_ros/: data_utils.py  save_single_image.py  vlm_trajectory_predictor.py
(+25 files in other folders)
