<?xml version="1.0"?>
<package format="2">
  <name>navigate</name>
  <version>0.0.1</version>
  <description>ROS package to interface with navigation VLM</description>

  <maintainer email="mateogc@cs.washington.edu">Mateo Guaman Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_filter</build_depend>
  <exec_depend>message_filter</exec_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>
